# insect_residue_analysis_tools

./: .gitignore  pyproject.toml
analysis_tools/: auto_detection.py  contour_compare.py  early_dev_tool.py  main.py  moz_shape.py  new_ver_tool.py  test.py  tool_multi_lv_masks.py  tool_multi_lv_masks_2.py  validation_tool.py  widgetgallery.py
contour_detector_gui/: app.py  image_utils.py
design_graph/: logic.excalidraw
test/: drawing_tool.py  fft.py  filter.py  grabcut.py  grid_clustering.py  hist_eq.py  laplacian.py  mask_seg.py  moz.py  moz_shape.py  new.py  new_hist.py  to_black_and_white.py  try.py
test/garbage/: main.py
